// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DetailedBit component > renders overflow with red dotted border 1`] = `
<DocumentFragment>
  <div
    style="display: inline-block; font-family: monospace; margin: 0.5px;"
  >
    <div
      style="color: rgb(153, 153, 153); background-color: rgb(0, 0, 0); border: 1px dotted red;"
    >
      1
    </div>
  </div>
</DocumentFragment>
`;

exports[`DetailedBit component > renders with big endian bit order 1`] = `
<DocumentFragment>
  <div
    style="display: inline-block; font-family: monospace; margin: 0.5px;"
  >
    <div
      style="color: rgb(153, 153, 153); background-color: rgb(0, 0, 0); border: 1px solid rgb(204, 204, 204);"
    >
      1
    </div>
    <div
      style="user-select: none; font-size: 0.5em; text-align: center; line-height: 1em;"
    >
      0
    </div>
  </div>
</DocumentFragment>
`;

exports[`DetailedBit component > renders with little endian bit order 1`] = `
<DocumentFragment>
  <div
    style="display: inline-block; font-family: monospace; margin: 0.5px;"
  >
    <div
      style="color: rgb(153, 153, 153); background-color: rgb(0, 0, 0); border: 1px solid rgb(204, 204, 204);"
    >
      1
    </div>
    <div
      style="user-select: none; font-size: 0.5em; text-align: center; line-height: 1em;"
    >
      0
    </div>
  </div>
</DocumentFragment>
`;

exports[`DetailedBit component > renders zero padding with gray dotted border 1`] = `
<DocumentFragment>
  <div
    style="display: inline-block; font-family: monospace; margin: 0.5px;"
  >
    <div
      style="color: rgb(204, 204, 204); background-color: rgb(255, 255, 255); border: 1px dotted gray;"
    >
      0
    </div>
  </div>
</DocumentFragment>
`;

exports[`DetailedBit component > should render "1" for stand=true and overflow=false 1`] = `
<DocumentFragment>
  <div
    style="display: inline-block; font-family: monospace; margin: 0.5px;"
  >
    <div
      style="color: rgb(153, 153, 153); background-color: rgb(0, 0, 0); border: 1px solid rgb(204, 204, 204);"
    >
      1
    </div>
  </div>
</DocumentFragment>
`;

exports[`DetailedBitString component > should render properly with 8 bits 1`] = `
<DocumentFragment>
  <div
    style="display: inline-block; font-family: monospace; margin: 0.5px;"
  >
    <div
      style="color: rgb(153, 153, 153); background-color: rgb(0, 0, 0); border: 1px solid rgb(204, 204, 204);"
    >
      1
    </div>
  </div>
  <div
    style="display: inline-block; font-family: monospace; margin: 0.5px;"
  >
    <div
      style="color: rgb(204, 204, 204); background-color: rgb(255, 255, 255); border: 1px solid rgb(204, 204, 204);"
    >
      0
    </div>
  </div>
  <div
    style="display: inline-block; font-family: monospace; margin: 0.5px;"
  >
    <div
      style="color: rgb(153, 153, 153); background-color: rgb(0, 0, 0); border: 1px solid rgb(204, 204, 204);"
    >
      1
    </div>
  </div>
  <div
    style="display: inline-block; font-family: monospace; margin: 0.5px;"
  >
    <div
      style="color: rgb(204, 204, 204); background-color: rgb(255, 255, 255); border: 1px solid rgb(204, 204, 204);"
    >
      0
    </div>
  </div>
  <div
    style="display: inline-block; font-family: monospace; margin: 0.5px;"
  >
    <div
      style="color: rgb(153, 153, 153); background-color: rgb(0, 0, 0); border: 1px solid rgb(204, 204, 204);"
    >
      1
    </div>
  </div>
  <div
    style="display: inline-block; font-family: monospace; margin: 0.5px;"
  >
    <div
      style="color: rgb(204, 204, 204); background-color: rgb(255, 255, 255); border: 1px solid rgb(204, 204, 204);"
    >
      0
    </div>
  </div>
  <div
    style="display: inline-block; font-family: monospace; margin: 0.5px;"
  >
    <div
      style="color: rgb(153, 153, 153); background-color: rgb(0, 0, 0); border: 1px solid rgb(204, 204, 204);"
    >
      1
    </div>
  </div>
  <div
    style="display: inline-block; font-family: monospace; margin: 0.5px;"
  >
    <div
      style="color: rgb(204, 204, 204); background-color: rgb(255, 255, 255); border: 1px solid rgb(204, 204, 204);"
    >
      0
    </div>
  </div>
</DocumentFragment>
`;
